<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_margin="@dimen/widget_margin"
    android:layout_width="@dimen/widget_width"
    android:layout_height="wrap_content"
    android:gravity="center">

    <EditText
        android:id="@+id/item_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:scrollHorizontally="false"
        android:maxLines="8"
        android:hint="@string/item_name_hint" />

    <CheckBox
        android:id="@+id/add_note_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/add_note"/>

    <EditText
        android:id="@+id/item_note_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:scrollHorizontally="false"
        android:maxLines="8"
        android:hint="@string/item_note_hint"
        android:visibility="gone"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/cancel_button"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/save_button"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/save"/>

    </LinearLayout>


</LinearLayout>