<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="@dimen/widget_margin"
    android:layout_width="@dimen/widget_width"
    android:layout_height="wrap_content"
    android:gravity="center">

    <TextView
        android:id="@+id/log_in_header"
        android:textAppearance="@android:style/TextAppearance.Material.DialogWindowTitle"
        android:minHeight="64dip"
        android:gravity="center_vertical|center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in_header"/>

    <EditText
        android:id="@+id/username_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/username_hint" />

    <EditText
        android:id="@+id/password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password_hint" />

    <CheckBox
        android:id="@+id/show_password_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/show_password"/>

    <LinearLayout
        android:id="@+id/status_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="4dp"
            android:visibility="gone"
            style="@android:style/Widget.Material.ProgressBar.Small"/>

        <TextView
            android:id="@+id/login_status_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/cancel_button"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/log_in_button"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/log_in"/>

    </LinearLayout>


</LinearLayout>