<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_margin="@dimen/widget_margin"
    android:layout_width="@dimen/widget_width"
    android:layout_height="wrap_content"
    android:gravity="center">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_a_list"/>

            <TextView
                android:id="@+id/picked_item_breadcrumbs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Material.Body1"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:scrollHorizontally="true"
                tools:text="Parent 1 > Child of parent 1 > Child 2"
                tools:visibility="visible"
                />

            <TextView
                android:id="@+id/picked_item_header"
                android:textAppearance="@android:style/TextAppearance.Material.DialogWindowTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:scrollHorizontally="true"
                tools:text="Picked Item"/>
        </LinearLayout>

        <ImageButton
            android:id="@+id/up_button"
            style="@style/HeaderButton"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/up"
            android:src="@drawable/button_up"
            android:layout_weight="0"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:background="@color/colorPrimary" />

    <ListView
        android:id="@+id/list_picker_items"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
    </ListView>

    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="start"
        android:textStyle="italic"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:text="@string/empty_list_choice"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textSize="16sp"
        tools:visibility="gone"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <Button
            android:id="@+id/logout_button"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/logout"/>

        <Button
            android:id="@+id/cancel_button"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/choose_button"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/choose"/>

    </LinearLayout>


</LinearLayout>