<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_margin="@dimen/widget_margin"
    android:layout_width="@dimen/widget_width"
    android:layout_height="wrap_content"
    android:gravity="center">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/item_breadcrumbs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Material.Body1"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:scrollHorizontally="true"
                tools:text="Parent 1 > Child of parent 1 > Child 2"
                tools:visibility="visible"
                />
            <TextView
                android:id="@+id/item_name_header"
                android:textAppearance="@android:style/TextAppearance.Material.DialogWindowTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="3"
                tools:text="Selected Item"/>

            <TextView
                android:id="@+id/item_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="4"
                android:ellipsize="end"
                tools:text="This is a very long item description and it has very many important things to say to each of you.  Four score and seven years ago our forefathers brought forth on this continent a new nation, conceived in liberty and dedicated to the proposition that all men are created equal."/>
        </LinearLayout>

        <ImageButton
            android:id="@+id/delete_button"
            style="@style/HeaderButton"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/up"
            android:src="@drawable/button_delete"
            android:layout_weight="0"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:background="@color/colorDivider" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <Button
            android:id="@+id/edit_button"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/edit"/>

        <Button
            android:id="@+id/complete_button"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/complete"/>

    </LinearLayout>


</LinearLayout>